--- a/.gitmodules
+++ b/.gitmodules
@@ -4,3 +4,6 @@
 [submodule "Vendor/glm"]
 	path = Vendor/glm
 	url = https://github.com/g-truc/glm.git
+[submodule "Vendor/assimp"]
+	path = Vendor/assimp
+	url = https://github.com/ARYANBro/assimp.git
